test/envoy.yaml
static_resources:
  listeners:
    - name: test
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                use_remote_address: true
                stat_prefix: ingress_http
                codec_type: AUTO
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: KEEP_UNCHANGED
                common_http_protocol_options:
                  idle_timeout: 3600s
                  headers_with_underscores_action: ALLOW
                request_timeout: 330s
                access_log:
                  name: log
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    log_format:
                      json_format:
                        status: '%RESPONSE_CODE%'
                        message: access log
                        severity: INFO
                        component: envoy
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      '@type': type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: /etc/envoy/proxy-wasm-http-header-rename.wasm
                          configuration:
                            "@type": type.googleapis.com/google.protobuf.StringValue
                            value: |
                              {
                                "request_headers_to_rename": [
                                  {
                                    "header": {
                                      "key": "original-header-1",
                                      "value": "new-header-1"
                                    }
                                  },
                                  {
                                    "header": {
                                      "key": "original-header-2",
                                      "value": "new-header-2"
                                    }
                                  },
                                  {
                                    "header": {
                                      "key": "original-header-3",
                                      "value": "new-header-3",
                                      "prefix": "bearer "
                                    }
                                  }
                                ]
                              }
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: upstream
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: upstream
                            auto_host_rewrite: true
  clusters:
    - name: upstream
      per_connection_buffer_limit_bytes: 52428800
      connect_timeout: 1.00s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 5000
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000
